added share button code

--- a/index.html
+++ b/index.html
@@ -1,12 +1,40 @@
-<!DOCTYPE html>
-<html lang="en">
+<html>
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <meta content="Ucapture" property="og:site_name">
+    <meta content="Ucapture" property="og:title">
 </head>
+
 <body>
-    
+    <!–– Other Page HTML -->
+
+    <button
+        class="class1 class2 snapchat-share-button"
+        data-share-url="https://riasahniwins.github.io/creative-kit-web-sample/UCapture_Share.png"
+    >
+        Share on Snapchat
+    </button>
+
+    <!-- Other Page HTML -->
+
+  <script>
+
+    // Load the SDK asynchronously
+    (function (d, s, id) {
+      var js, sjs = d.getElementsByTagName(s)[0];
+      if (d.getElementById(id)) return;
+      js = d.createElement(s); js.id = id;
+      js.src = "https://sdk.snapkit.com/js/v1/create.js";
+      sjs.parentNode.insertBefore(js, sjs);
+    }(document, 'script', 'snapkit-creative-kit-sdk'));
+
+    window.snapKitInit = function () {
+      snap.creativekit.initalizeShareButtons(
+        document.getElementsByClassName('snapchat-share-button')
+      );
+    };
+
+  </script>
 </body>
+
 </html>
