added publisher id

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta content="Ucapture" property="og:site_name">
     <meta content="Ucapture" property="og:title">
+    <meta content="ef107bbd-91e5-430e-bad0-70675c4ae902" property="snapchat:publisher" />
 </head>
 
 <body>
