added publisher id

--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
       sjs.parentNode.insertBefore(js, sjs);
     }(document, 'script', 'snapkit-creative-kit-sdk'));
 
-    window.snapKitInit = function () {
-      snap.creativekit.initalizeShareButtons(
-        document.getElementsByClassName('snapchat-share-button')
-      );
-    };
+    // window.snapKitInit = function () {
+    //   snap.creativekit.initalizeShareButtons(
+    //     document.getElementsByClassName('snapchat-share-button')
+    //   );
+    // };
 
   </script>
 </body>
