added publisher id

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 <body>
     <!–– Other Page HTML -->
-    <div class="snapchat-creative-kit-share"></div>
+    <div class="snapchat-creative-kit-share" data-size="large"></div>
     <button
         class="class1 class2 snapchat-share-button"
         data-share-url="https://riasahniwins.github.io/creative-kit-web-sample/UCapture_Share.png"
